[package]
authors = ["Zachary Kohnen <me@dusterthefirst.com>"]
edition = "2021"
name    = "cameras"
publish = false
version = "0.0.0"

[dependencies]
gpio-cdev              = "0.5.1"
log                    = { version = "0.4.18", features = ["std"] }
simplelog              = "0.12.1"
systemd-journal-logger = "1.0.0"
